--- a/app.json
+++ b/app.json
@@ -1,4 +1,10 @@
 {
+    {
+  "name": "MT FilesStore Bot",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
+  }
     "name": "MT FilesStore Bot",
     "description": "A Telegram Files Store Bot in Pyrogram by @MRK_YT",
     "logo": "https://telegra.ph/file/9e831d15da94deb56ef4c.png",
